# cpp-vengine

./: .editorconfig  CMakeLists.txt  CMakeSettings.json  Event.cpp  Event.h  Events.cpp  Events.h  GameClock.cpp  GameClock.h  GameContext.cpp  GameContext.h  GameState.cpp  GameState.h  Input.cpp  Input.h  LICENSE.txt  Menu.cpp  Menu.h  MenuEntryRender.cpp  MenuEntryRender.h  MenuRender.cpp  MenuRender.h  MenuSettingsState.cpp  MenuState.cpp  MenuWidget.cpp  MenuWidget.h  MenuWidgetRender.cpp  MenuWidgetRender.h  README.md  SCRATCH.md  SDL.cpp  SDL.h  SDLControllerEventAdapter.cpp  SDLControllerEventAdapter.h  Traum.cpp  asset_manager.cpp  asset_manager.h  game.cpp  game_clock.cpp  game_clock.h  (+16 more)
menu/: menu.cpp  menu.h  menu_widget.cpp  menu_widget.h
state_machine/: game_state.cpp  game_state.h  menu_settings_state.cpp  menu_state.cpp  pause_state.cpp  play_state.cpp
